<resources>
    <string name="app_name">WorkoutNotebook</string>

    // Workout Activity
    <string name="title_activity_workout">Workout</string>
    <string name="btn_text_add_exercise">Add Exercise</string>
    <string name="btn_cycle_workout">Prev/Next Workouts</string>
    <string name="btn_desc_prev_workout">Previous Workout</string>
    <string name="btn_desc_next_workout">New or Next Workout</string>

    //Step Counter Activity
    <string name="title_activity_step_counter">Step counter</string>
    <string name="start_pedometer">Start Pedometer</string>
    <string name="stop_pedometer">Stop Pedometer</string>

    // Select Exercise Activity
    <string name="title_activity_select_exercise">Select Exercise</string>
    <string name="text_create_new_exercise">Create Exercise</string>
    <color name="blue">#009FE3</color>

    // Create Exercise Activity
    <string name="title_activity_create_exercise">Create Exercise</string>
    <string name="hint_exercise_name">Exercise Name</string>
    <string name="hint_exercise_description">Exercise Description</string>
    <string name="hint_exercise_category">Exercise Category</string>
    <string name="btn_text_save_exercise">Save Exercise</string>

    // Add Set Activity
    <string name="title_activity_add_set">Add New Set</string>
    <string name="hint_set_reps">Reps</string>
    <string name="hint_set_weight">Weight</string>
    <string name="btn_text_save_set">Save Set</string>
    <string name="btn_desc_save_set">Save this set</string>
    <string name="btn_desc_add_rep">Button add rep</string>
    <string name="btn_desc_minus_rep">Button minus rep</string>
    <string name="btn_desc_add_weight">Button add weight increment</string>
    <string name="btn_desc_minus_weight">Button minus weight increment</string>
    <string name="btn_text_undo_set">Undo</string>
    <string name="btn_desc_undo_set">Undo most recent set</string>
    <string name="text_caption_previous_sets">Last:</string>
    <string name="text_caption_current_sets">Now:</string>

    // Menu
    <string name="title_goto_settings">Settings</string>

    // Settings
    <string name="title_settings_activity">Settings</string>

    <string name="pref_category_title_units">Units</string>
    <string name="title_weight_units">Weight Units</string>
    <string name="key_weight_units">key_weight_units</string>
    <string name="weight_unit_default">lbs</string>
    <string-array name="weight_units">
        <item>lbs</item>
        <item>kg</item>
    </string-array>
    <string name="summary_weight_units">Choose which units used for weight</string>

    <string name="pref_category_increment_amounts">Increment Amounts</string>
    <string name="title_increment_weight">Increment Weight Amount</string>
    <string name="key_increment_weight_amount">Increment Weight Amount</string>
    <string name="summary_increment_weight">Choose how much to increment weight by each time</string>6
    <string name="default_increment_weight_amount">1.0</string>

    <string name="pref_category_title_db_settings">Database Settings</string>
    <string name="title_db_reset">Reset Database</string>
    <string name="key_db_reset">key_db_reset</string>
    <string name="summary_db_reset">Click here to destroy all your data</string>

    <string name="btn_text_reset_database">Reset</string>
</resources>
