<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.workoutnotebook.CreateExerciseActivity"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <EditText
        android:id="@+id/text_edit_exercise_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_exercise_name"
        android:inputType="text"/>

    <EditText
        android:id="@+id/text_edit_exercise_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_exercise_description"
        android:inputType="textMultiLine"/>

    <EditText
        android:id="@+id/text_edit_exercise_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_exercise_category"
        android:inputType="text"/>

    <Button
        android:id="@+id/btn_save_exercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/btn_text_save_exercise"/>

</LinearLayout>
